--- a/FrontEndAuth/frontend/src/assets/style.css
+++ b/FrontEndAuth/frontend/src/assets/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
   margin: 0;
-  background-color: rgb(250, 250, 250);
+  background-color: gold;
 }
 
 h1,
@@ -29,6 +29,7 @@ p {
 
 h1 {
   font-size: 2rem;
+  color: black;
 }
 
 p {
