--- a/FrontEndAuth/frontend/src/assets/style.css
+++ b/FrontEndAuth/frontend/src/assets/style.css
@@ -78,9 +78,16 @@ button {
   width: 40px;
 }
 
+.description {
+  display: none;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 720px;
+  }
+  .description {
+    display: inline-block;
   }
 }
 
